<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineL10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineR10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/fb_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:background="@drawable/fb_disabled"
        android:text="@string/flashback"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"

        android:scrollHorizontally="true"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="Song Name"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/fb_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollHorizontally="true"
        android:text="Artist"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/song_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:focusable="false"
        android:padding="@dimen/entry_margin"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/song_artist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.1"/>

    <ImageButton
        android:id="@+id/dislike_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:focusable="false"
        android:padding="@dimen/entry_margin"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/song_artist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/location_lab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fab_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/location"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/like_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/location_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:paddingVertical="@dimen/fab_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollHorizontally="true"
        android:text="@string/no_history"
        android:gravity="start"
        app:layout_constraintLeft_toRightOf="@id/location_lab"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/like_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/time_lab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fab_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/time"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/location_lab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/time_date_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fab_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollHorizontally="true"
        android:text="@string/no_history"
        android:gravity="start"
        app:layout_constraintLeft_toLeftOf="@id/location_txt"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/location_lab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/time_clock_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fab_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollHorizontally="true"
        android:text="@string/no_history"
        android:gravity="start"
        app:layout_constraintLeft_toLeftOf="@id/location_txt"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/time_lab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/show_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showplaylist"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/time_clock_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

</android.support.constraint.ConstraintLayout>